@startuml Matchday Penalty Shootout Domain
title Matchday V5 - Dominio de tanda de penales

hide empty members
skinparam classAttributeIconSize 0

class Match
class PenaltyShootout {
  +PenaltyShootoutStatus status
  +TeamSide starting_team_side
  +int home_score
  +int away_score
  +int home_kick_count
  +int away_kick_count
  +TeamSide winner_team_side
  --
  +next_team_side: TeamSide?
  +record_kick(...): void
  +finish(...): void
}
class PenaltyShootoutKick {
  +UUID player_id
  +TeamSide team_side
  +int sequence_number
  +PenaltyKickOutcome outcome
}
class PenaltyShootoutParticipant {
  +UUID player_id
  +TeamSide team_side
  +bool is_eligible
  +IneligibilityReason reason
}

Match "1" *-- "0..1" PenaltyShootout
PenaltyShootout "1" *-- "0..*" PenaltyShootoutKick
PenaltyShootout "1" *-- "1..*" PenaltyShootoutParticipant

note bottom of PenaltyShootout
  Cinco lanzamientos iniciales, victoria
  matemática, muerte súbita y bloqueo tras
  decidir ganador. Aplica igualdad numérica
  de participantes según la Regla 10.
end note
@enduml
